Minor fixed to LinearRegression

--- a/code/LinearRegression.ipynb
+++ b/code/LinearRegression.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,14 +157,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluation Results (mean ± 95% CI):\n",
+      "Evaluation Results (mean ± std):\n",
       "PER (test)     : 7.9 ± 2.9\n",
       "PER (mixed)    : 7.1 ± 1.2\n",
       "iPER (test)    : 21.0 ± 25.0\n",
@@ -190,7 +190,7 @@
     "}\n",
     "\n",
     "# Print results\n",
-    "print(\"Evaluation Results (mean ± 95% CI):\")\n",
+    "print(\"Evaluation Results (mean ± std):\")\n",
     "for name, value in results.items():\n",
     "    print(f\"{name:15s}: {value}\")"
    ]
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,16 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1659311c0>"
+       "<matplotlib.collections.PathCollection at 0x1053e5700>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -267,72 +267,6 @@
       "MedAPE_reg     : 11.0 %\n",
       "MAPE_int       : 9.2 %\n",
       "MedAPE_int     : 7.9 %\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:51: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"PER_train\"] = errors[train_mask & valid_mask].sum() / (train_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:56: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"iPER_train\"] = errors[train_mask & iso_mask & valid_mask].sum() / (train_mask & iso_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:51: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"PER_train\"] = errors[train_mask & valid_mask].sum() / (train_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:56: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"iPER_train\"] = errors[train_mask & iso_mask & valid_mask].sum() / (train_mask & iso_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:51: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"PER_train\"] = errors[train_mask & valid_mask].sum() / (train_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:56: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"iPER_train\"] = errors[train_mask & iso_mask & valid_mask].sum() / (train_mask & iso_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:51: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"PER_train\"] = errors[train_mask & valid_mask].sum() / (train_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:56: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"iPER_train\"] = errors[train_mask & iso_mask & valid_mask].sum() / (train_mask & iso_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:51: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"PER_train\"] = errors[train_mask & valid_mask].sum() / (train_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:56: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"iPER_train\"] = errors[train_mask & iso_mask & valid_mask].sum() / (train_mask & iso_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:51: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"PER_train\"] = errors[train_mask & valid_mask].sum() / (train_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:56: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"iPER_train\"] = errors[train_mask & iso_mask & valid_mask].sum() / (train_mask & iso_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:51: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"PER_train\"] = errors[train_mask & valid_mask].sum() / (train_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:56: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"iPER_train\"] = errors[train_mask & iso_mask & valid_mask].sum() / (train_mask & iso_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:51: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"PER_train\"] = errors[train_mask & valid_mask].sum() / (train_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:56: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"iPER_train\"] = errors[train_mask & iso_mask & valid_mask].sum() / (train_mask & iso_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:51: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"PER_train\"] = errors[train_mask & valid_mask].sum() / (train_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:56: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"iPER_train\"] = errors[train_mask & iso_mask & valid_mask].sum() / (train_mask & iso_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:51: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"PER_train\"] = errors[train_mask & valid_mask].sum() / (train_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:56: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"iPER_train\"] = errors[train_mask & iso_mask & valid_mask].sum() / (train_mask & iso_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:51: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"PER_train\"] = errors[train_mask & valid_mask].sum() / (train_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:56: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"iPER_train\"] = errors[train_mask & iso_mask & valid_mask].sum() / (train_mask & iso_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:51: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"PER_train\"] = errors[train_mask & valid_mask].sum() / (train_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:56: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"iPER_train\"] = errors[train_mask & iso_mask & valid_mask].sum() / (train_mask & iso_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:51: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"PER_train\"] = errors[train_mask & valid_mask].sum() / (train_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:55: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"iPER_test\"] = errors[test_mask & iso_mask & valid_mask].sum() / (test_mask & iso_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:56: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"iPER_train\"] = errors[train_mask & iso_mask & valid_mask].sum() / (train_mask & iso_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:57: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"iPER_mixed\"] = errors[mixed_mask & iso_mask & valid_mask].sum() / (mixed_mask & iso_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:51: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"PER_train\"] = errors[train_mask & valid_mask].sum() / (train_mask & valid_mask).sum()\n",
-      "/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/Modules/LinearModels/CVLinearModels.py:56: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  results[\"iPER_train\"] = errors[train_mask & iso_mask & valid_mask].sum() / (train_mask & iso_mask & valid_mask).sum()\n"
      ]
     }
    ],
