--- a/code/NNBCE.ipynb
+++ b/code/NNBCE.ipynb
@@ -34,7 +34,7 @@
     "current_dir = Path().cwd()\n",
     "METABOBASE_PATH = current_dir.parent / \"data\" / \"IDB.csv\"\n",
     "ARTICLES_PATH = current_dir.parent / \"data\"  / \"ILD.csv\"\n",
-    "DEVICE = 'mps' if torch.mps.is_available() else 'cpu'\n",
+    "DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
     "\n"
    ]
@@ -686,7 +686,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "DataSphere Kernel",
    "language": "python",
    "name": "python3"
   },
@@ -700,9 +700,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
