Added accumulator functional for IDB

--- a/code/NNBCE.ipynb
+++ b/code/NNBCE.ipynb
@@ -184,11 +184,39 @@
     "    \"weight_decay\": [0.01,0.0001,0],\n",
     "    \"batch_size\": [512]\n",
     "} \n",
-    "\n",
+    "RD_acc_idb = RelDiffErrorAccumulator()\n",
     "hyperparameters_grid = create_hp_grid(param_values)\n",
-    "RankNET_nested = np.array(NestedCV(X_mb_tensor,y_mb_tensor,classes,f_mb,hyperparameters_grid,RankNETCV,n_itter_inner=1,n_itter_out=1))\n",
+    "RankNET_nested = np.array(NestedCV(X_mb_tensor,y_mb_tensor,classes,f_mb,hyperparameters_grid,RankNETCV,n_itter_inner=1,n_itter_out=1,accumulator=RD_acc_idb))\n",
     "save_dir = current_dir.parent / \"output\" / 'IDB_results_p1' / 'NNBCE.csv'\n",
     "np.savetxt(save_dir,RankNET_nested)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_accumulator_to_csv(accumulator, output_path):\n",
+    "    \"\"\"\n",
+    "    Writes the contents of a RelDiffErrorAccumulator instance to a CSV file.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - accumulator: an instance of RelDiffErrorAccumulator\n",
+    "    - output_path: path to the output CSV file\n",
+    "    \"\"\"\n",
+    "    with open(output_path, mode='w', newline='') as csvfile:\n",
+    "        writer = csv.writer(csvfile)\n",
+    "        writer.writerow(['rel_diff', 'error', 'is_isomer'])  # header\n",
+    "\n",
+    "        for rel_diff, error, is_isomer in zip(\n",
+    "            accumulator.rel_diffs,\n",
+    "            accumulator.errors,\n",
+    "            accumulator.isomeric_flags\n",
+    "        ):\n",
+    "            writer.writerow([rel_diff, int(error), int(is_isomer)])\n",
+    "\n",
+    "write_accumulator_to_csv(RD_acc_idb,current_dir.parent/'output'/'Accumulators_IDB'/'NNBCE.csv')"
    ]
   },
   {
