Optimized code for more itterations inside CV

--- a/code/NNBCE.ipynb
+++ b/code/NNBCE.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-08-16T14:14:13.595764Z",
@@ -244,20 +244,33 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'batch_size'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/NNBCE.ipynb Cell 14\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/NNBCE.ipynb#Y254sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m RD_acc_idb \u001b[39m=\u001b[39m RelDiffErrorAccumulator()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/NNBCE.ipynb#Y254sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m hyperparameters_grid \u001b[39m=\u001b[39m create_hp_grid(param_values)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/NNBCE.ipynb#Y254sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m RankNET_nested \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(NestedCV(X_mb_tensor,y_mb_tensor,classes,f_mb,hyperparameters_grid,RankNETCV,n_itter_inner\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m,n_itter_out\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m,accumulator\u001b[39m=\u001b[39;49mRD_acc_idb))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/NNBCE.ipynb#Y254sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# save_dir = current_dir.parent / \"output\" / 'IDB_results_p1' / 'NNBCE.csv'\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/ivanrozanov/Desktop/FlavonoidsElutionOrder/Code/code/NNBCE.ipynb#Y254sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# np.savetxt(save_dir,RankNET_nested)\u001b[39;00m\n",
+      "File \u001b[0;32m~/Desktop/FlavonoidsElutionOrder/Code/code/Modules/NeuralNetworks/BCELoss/CVNNBCE.py:194\u001b[0m, in \u001b[0;36mNestedCV\u001b[0;34m(X, y, classes, formulas, hyperparameters_grid, inner_cv_func, n_outter_splits, n_inner_splits, n_itter_out, n_itter_inner, accumulator)\u001b[0m\n\u001b[1;32m    191\u001b[0m X_train,y_train \u001b[39m=\u001b[39m X[train_idx],y[train_idx]\n\u001b[1;32m    192\u001b[0m classes_train \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(classes,dtype\u001b[39m=\u001b[39m\u001b[39mint\u001b[39m)[train_idx]\n\u001b[0;32m--> 194\u001b[0m best_model \u001b[39m=\u001b[39m inner_cv_func(X_train,y_train,classes_train,hyperparameters_grid,n_itter_inner,n_inner_splits)\n\u001b[1;32m    196\u001b[0m predictions \u001b[39m=\u001b[39m best_model(X)\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m    197\u001b[0m metrics \u001b[39m=\u001b[39m PairwiseMetrics(y,predictions,test_idx,formulas)\n",
+      "File \u001b[0;32m~/Desktop/FlavonoidsElutionOrder/Code/code/Modules/NeuralNetworks/BCELoss/CVNNBCE.py:129\u001b[0m, in \u001b[0;36mRankNETCV\u001b[0;34m(X, y, classes, hyperparameters_grid, n_itter, n_splits)\u001b[0m\n\u001b[1;32m    127\u001b[0m best_hp \u001b[39m=\u001b[39m hyperparameters_grid[torch\u001b[39m.\u001b[39margmin(results_tensor)]\n\u001b[1;32m    128\u001b[0m best_model \u001b[39m=\u001b[39m RankNet(X\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m],hidden_dim\u001b[39m=\u001b[39mbest_hp[\u001b[39m'\u001b[39m\u001b[39mhidden_dim\u001b[39m\u001b[39m'\u001b[39m],n_hidden\u001b[39m=\u001b[39mbest_hp[\u001b[39m'\u001b[39m\u001b[39mn_hidden\u001b[39m\u001b[39m'\u001b[39m])\u001b[39m.\u001b[39mto(DEVICE)\n\u001b[0;32m--> 129\u001b[0m train_loader \u001b[39m=\u001b[39m DataloaderRankNet(X,y,\u001b[39mNone\u001b[39;00m,batch_size\u001b[39m=\u001b[39mbest_hp[\u001b[39m'\u001b[39;49m\u001b[39mbatch_size\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[1;32m    130\u001b[0m train_RankNet(best_model,train_loader\u001b[39m=\u001b[39mtrain_loader,num_epochs\u001b[39m=\u001b[39mbest_hp[\u001b[39m'\u001b[39m\u001b[39mnum_epochs\u001b[39m\u001b[39m'\u001b[39m],optimizer\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39moptim\u001b[39m.\u001b[39mAdam(best_model\u001b[39m.\u001b[39mparameters(),lr\u001b[39m=\u001b[39m\u001b[39m0.01\u001b[39m,weight_decay\u001b[39m=\u001b[39mbest_hp[\u001b[39m'\u001b[39m\u001b[39mweight_decay\u001b[39m\u001b[39m'\u001b[39m]))\n\u001b[1;32m    131\u001b[0m \u001b[39mreturn\u001b[39;00m best_model\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'batch_size'"
+     ]
+    }
+   ],
    "source": [
     "param_values = {\n",
     "    \"hidden_dim\": [32,64],\n",
     "    \"n_hidden\": [2,4],\n",
     "    \"num_epochs\": [5,10],\n",
     "    \"weight_decay\": [0.01,0.0001,0],\n",
-    "    \"batch_size\": [512]\n",
     "} \n",
     "RD_acc_idb = RelDiffErrorAccumulator()\n",
     "hyperparameters_grid = create_hp_grid(param_values)\n",
-    "RankNET_nested = np.array(NestedCV(X_mb_tensor,y_mb_tensor,classes,f_mb,hyperparameters_grid,RankNETCV,n_itter_inner=5,n_itter_out=5,accumulator=RD_acc_idb))\n",
-    "save_dir = current_dir.parent / \"output\" / 'IDB_results_p1' / 'NNBCE.csv'\n",
-    "np.savetxt(save_dir,RankNET_nested)"
+    "RankNET_nested = np.array(NestedCV(X_mb_tensor,y_mb_tensor,classes,f_mb,hyperparameters_grid,RankNETCV,n_itter_inner=1,n_itter_out=1,accumulator=RD_acc_idb))\n",
+    "# save_dir = current_dir.parent / \"output\" / 'IDB_results_p1' / 'NNBCE.csv'\n",
+    "# np.savetxt(save_dir,RankNET_nested)"
    ]
   },
   {
@@ -556,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -567,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "execution": {
      "iopub.status.idle": "2025-08-16T16:20:26.279586Z"
@@ -585,14 +598,14 @@
     "}\n",
     "hyperparameters_grid = create_hp_grid(param_values)\n",
     "train_loader = DataloaderRankNet(X_a_tensor,y_a_tensor,dois_a,batch_size=512)\n",
-    "ild_results,ild_reg_metrics,ild_int_metrics = ILD_cv(train_loader,X_mb_tensor,y_mb_tensor,classes,f_mb,hyperparameters_grid,n_itter=5,n_splits=5,accumulator=RD_acc)\n",
+    "ild_results,ild_reg_metrics,ild_int_metrics = ILD_cv(train_loader,X_mb_tensor,y_mb_tensor,classes,f_mb,hyperparameters_grid,n_itter=10,n_splits=5,accumulator=RD_acc)\n",
     "ild_results,ild_reg_metrics,ild_int_metrics = np.array(ild_results),np.array(ild_reg_metrics), np.array(ild_int_metrics)\n",
     "np.savetxt(current_dir.parent/'output'/'IDB_results_p2'/'NNBCER2.csv',ild_results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-08-16T16:20:26.281944Z",
@@ -660,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-08-16T16:20:26.805256Z",
@@ -674,10 +687,10 @@
      "output_type": "stream",
      "text": [
       "Evaluation Results (mean ± 95% CI):\n",
-      "PER (test)     : 10.7 ± 1.2\n",
-      "PER (mixed)    : 10.57 ± 0.42\n",
-      "iPER (test)    : 23.3 ± 4.0\n",
-      "iPER (mixed)   : 22.3 ± 1.7\n"
+      "PER (test)     : 10.6 ± 1.1\n",
+      "PER (mixed)    : 10.53 ± 0.44\n",
+      "iPER (test)    : 22.9 ± 4.0\n",
+      "iPER (mixed)   : 22.2 ± 1.9\n"
      ]
     }
    ],
@@ -705,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-08-16T16:20:26.826141Z",
@@ -720,7 +733,7 @@
      "text": [
       "Evaluation Results (mean ± 95% CI):\n",
       "MAPE           : 9.6 ± 1.1\n",
-      "MedAPE         : 8.9 ± 1.4\n"
+      "MedAPE         : 8.8 ± 1.3\n"
      ]
     }
    ],
@@ -743,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-08-16T16:20:26.842997Z",
@@ -757,8 +770,8 @@
      "output_type": "stream",
      "text": [
       "Evaluation Results (mean ± 95% CI):\n",
-      "MAPE           : 10.5 ± 1.3\n",
-      "MedAPE         : 8.7 ± 1.6\n"
+      "MAPE           : 10.7 ± 1.4\n",
+      "MedAPE         : 9.2 ± 1.8\n"
      ]
     }
    ],
