--- a/code/Vis&Stats.ipynb
+++ b/code/Vis&Stats.ipynb
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [
     {
@@ -571,8 +571,8 @@
        "      <th>0</th>\n",
        "      <td>(LinReg, LogReg92)</td>\n",
        "      <td>6.191506</td>\n",
-       "      <td>4.320195</td>\n",
-       "      <td>8.031502</td>\n",
+       "      <td>4.356035</td>\n",
+       "      <td>8.051852</td>\n",
        "      <td>0.000122</td>\n",
        "      <td>0.000734</td>\n",
        "      <td>True</td>\n",
@@ -581,8 +581,8 @@
        "      <th>1</th>\n",
        "      <td>(LinReg, NNBCE)</td>\n",
        "      <td>3.984941</td>\n",
-       "      <td>0.656870</td>\n",
-       "      <td>7.284610</td>\n",
+       "      <td>0.784345</td>\n",
+       "      <td>7.234796</td>\n",
        "      <td>0.085139</td>\n",
        "      <td>0.340556</td>\n",
        "      <td>False</td>\n",
@@ -591,8 +591,8 @@
        "      <th>2</th>\n",
        "      <td>(LinReg, NNMR)</td>\n",
        "      <td>5.151804</td>\n",
-       "      <td>2.574411</td>\n",
-       "      <td>7.772341</td>\n",
+       "      <td>2.533651</td>\n",
+       "      <td>7.853394</td>\n",
        "      <td>0.003565</td>\n",
        "      <td>0.017825</td>\n",
        "      <td>True</td>\n",
@@ -601,8 +601,8 @@
        "      <th>3</th>\n",
        "      <td>(LogReg92, NNBCE)</td>\n",
        "      <td>-2.206565</td>\n",
-       "      <td>-5.256204</td>\n",
-       "      <td>0.621650</td>\n",
+       "      <td>-5.139213</td>\n",
+       "      <td>0.719483</td>\n",
        "      <td>0.200216</td>\n",
        "      <td>0.600649</td>\n",
        "      <td>False</td>\n",
@@ -611,8 +611,8 @@
        "      <th>4</th>\n",
        "      <td>(LogReg92, NNMR)</td>\n",
        "      <td>-1.039702</td>\n",
-       "      <td>-3.239037</td>\n",
-       "      <td>1.100755</td>\n",
+       "      <td>-3.276075</td>\n",
+       "      <td>1.173882</td>\n",
        "      <td>0.441837</td>\n",
        "      <td>0.600649</td>\n",
        "      <td>False</td>\n",
@@ -621,8 +621,8 @@
        "      <th>5</th>\n",
        "      <td>(NNBCE, NNMR)</td>\n",
        "      <td>1.166863</td>\n",
-       "      <td>-0.938483</td>\n",
-       "      <td>3.278221</td>\n",
+       "      <td>-0.906145</td>\n",
+       "      <td>3.292321</td>\n",
        "      <td>0.201078</td>\n",
        "      <td>0.600649</td>\n",
        "      <td>False</td>\n",
@@ -633,12 +633,12 @@
       ],
       "text/plain": [
        "                 Pair  MeanDiff  95%CI_low  95%CI_high     p_raw    p_corr  \\\n",
-       "0  (LinReg, LogReg92)  6.191506   4.320195    8.031502  0.000122  0.000734   \n",
-       "1     (LinReg, NNBCE)  3.984941   0.656870    7.284610  0.085139  0.340556   \n",
-       "2      (LinReg, NNMR)  5.151804   2.574411    7.772341  0.003565  0.017825   \n",
-       "3   (LogReg92, NNBCE) -2.206565  -5.256204    0.621650  0.200216  0.600649   \n",
-       "4    (LogReg92, NNMR) -1.039702  -3.239037    1.100755  0.441837  0.600649   \n",
-       "5       (NNBCE, NNMR)  1.166863  -0.938483    3.278221  0.201078  0.600649   \n",
+       "0  (LinReg, LogReg92)  6.191506   4.356035    8.051852  0.000122  0.000734   \n",
+       "1     (LinReg, NNBCE)  3.984941   0.784345    7.234796  0.085139  0.340556   \n",
+       "2      (LinReg, NNMR)  5.151804   2.533651    7.853394  0.003565  0.017825   \n",
+       "3   (LogReg92, NNBCE) -2.206565  -5.139213    0.719483  0.200216  0.600649   \n",
+       "4    (LogReg92, NNMR) -1.039702  -3.276075    1.173882  0.441837  0.600649   \n",
+       "5       (NNBCE, NNMR)  1.166863  -0.906145    3.292321  0.201078  0.600649   \n",
        "\n",
        "   Significant  \n",
        "0         True  \n",
@@ -649,7 +649,7 @@
        "5        False  "
       ]
      },
-     "execution_count": 322,
+     "execution_count": 371,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,32 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.91330751375558e-13"
-      ]
-     },
-     "execution_count": 328,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "i = 3\n",
-    "scores = {'LogReg20':LogReg20[:,i].reshape(-1),'LogReg92':LogReg92[:,i].reshape(-1),'NNBCE':BCE[:,i].reshape(-1),'NNMR':MRLoss[:,i].reshape(-1)}\n",
-    "df = pd.DataFrame(scores)\n",
-    "\n",
-    "stat, p = friedmanchisquare(scores['LogReg20'],scores['LogReg92'],scores['NNBCE'],scores['NNMR'])\n",
-    "p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [
     {
@@ -1393,61 +1368,61 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>(LogReg20, LogReg92)</td>\n",
-       "      <td>1.969816</td>\n",
-       "      <td>0.937968</td>\n",
-       "      <td>2.988545</td>\n",
-       "      <td>3.861535e-04</td>\n",
-       "      <td>1.158461e-03</td>\n",
+       "      <td>1.970</td>\n",
+       "      <td>0.944</td>\n",
+       "      <td>3.006</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.001</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>(LogReg20, NNBCE)</td>\n",
-       "      <td>-3.272484</td>\n",
-       "      <td>-4.274223</td>\n",
-       "      <td>-2.237293</td>\n",
-       "      <td>2.484921e-06</td>\n",
-       "      <td>9.939682e-06</td>\n",
+       "      <td>-3.272</td>\n",
+       "      <td>-4.260</td>\n",
+       "      <td>-2.246</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>(LogReg20, NNMR)</td>\n",
-       "      <td>2.074452</td>\n",
-       "      <td>0.611703</td>\n",
-       "      <td>3.463915</td>\n",
-       "      <td>7.768341e-03</td>\n",
-       "      <td>1.553668e-02</td>\n",
+       "      <td>2.074</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>3.467</td>\n",
+       "      <td>0.008</td>\n",
+       "      <td>0.016</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>(LogReg92, NNBCE)</td>\n",
-       "      <td>-5.242300</td>\n",
-       "      <td>-5.873342</td>\n",
-       "      <td>-4.636665</td>\n",
-       "      <td>1.776357e-15</td>\n",
-       "      <td>1.065814e-14</td>\n",
+       "      <td>-5.242</td>\n",
+       "      <td>-5.870</td>\n",
+       "      <td>-4.639</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>(LogReg92, NNMR)</td>\n",
-       "      <td>0.104636</td>\n",
-       "      <td>-0.885763</td>\n",
-       "      <td>1.021630</td>\n",
-       "      <td>1.125349e-01</td>\n",
-       "      <td>1.125349e-01</td>\n",
+       "      <td>0.105</td>\n",
+       "      <td>-0.915</td>\n",
+       "      <td>1.045</td>\n",
+       "      <td>0.113</td>\n",
+       "      <td>0.113</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>(NNBCE, NNMR)</td>\n",
-       "      <td>5.346936</td>\n",
-       "      <td>4.312569</td>\n",
-       "      <td>6.313039</td>\n",
-       "      <td>2.121312e-08</td>\n",
-       "      <td>1.060656e-07</td>\n",
+       "      <td>5.347</td>\n",
+       "      <td>4.289</td>\n",
+       "      <td>6.356</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1455,24 +1430,24 @@
        "</div>"
       ],
       "text/plain": [
-       "                   Pair  MeanDiff  95%CI_low  95%CI_high         p_raw  \\\n",
-       "0  (LogReg20, LogReg92)  1.969816   0.937968    2.988545  3.861535e-04   \n",
-       "1     (LogReg20, NNBCE) -3.272484  -4.274223   -2.237293  2.484921e-06   \n",
-       "2      (LogReg20, NNMR)  2.074452   0.611703    3.463915  7.768341e-03   \n",
-       "3     (LogReg92, NNBCE) -5.242300  -5.873342   -4.636665  1.776357e-15   \n",
-       "4      (LogReg92, NNMR)  0.104636  -0.885763    1.021630  1.125349e-01   \n",
-       "5         (NNBCE, NNMR)  5.346936   4.312569    6.313039  2.121312e-08   \n",
+       "                   Pair  MeanDiff  95%CI_low  95%CI_high  p_raw  p_corr  \\\n",
+       "0  (LogReg20, LogReg92)     1.970      0.944       3.006  0.000   0.001   \n",
+       "1     (LogReg20, NNBCE)    -3.272     -4.260      -2.246  0.000   0.000   \n",
+       "2      (LogReg20, NNMR)     2.074      0.625       3.467  0.008   0.016   \n",
+       "3     (LogReg92, NNBCE)    -5.242     -5.870      -4.639  0.000   0.000   \n",
+       "4      (LogReg92, NNMR)     0.105     -0.915       1.045  0.113   0.113   \n",
+       "5         (NNBCE, NNMR)     5.347      4.289       6.356  0.000   0.000   \n",
        "\n",
-       "         p_corr  Significant  \n",
-       "0  1.158461e-03         True  \n",
-       "1  9.939682e-06         True  \n",
-       "2  1.553668e-02         True  \n",
-       "3  1.065814e-14         True  \n",
-       "4  1.125349e-01        False  \n",
-       "5  1.060656e-07         True  "
+       "   Significant  \n",
+       "0         True  \n",
+       "1         True  \n",
+       "2         True  \n",
+       "3         True  \n",
+       "4        False  \n",
+       "5         True  "
       ]
      },
-     "execution_count": 329,
+     "execution_count": 377,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1543,7 +1518,7 @@
     "    \"Significant\": reject\n",
     "})\n",
     "\n",
-    "results"
+    "results.round(3)"
    ]
   }
  ],
