--- a/code/LogisticRegression.ipynb
+++ b/code/LogisticRegression.ipynb
@@ -631,6 +631,256 @@
     "for name, value in results.items():\n",
     "    print(f\"{name:15s}: {value}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Logistic Regression without interaction bits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FPGen = KernelFPGenerator(generating_function=FirstDegreeFP,parsing_function=get_sub_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mb_data = pd.read_csv(METABOBASE_PATH)\n",
+    "dois_mb = mb_data['DOI'].to_numpy()\n",
+    "mols_mb = mb_data['SMILES'].apply(Chem.MolFromSmiles).to_numpy()\n",
+    "X_mb = np.stack(mb_data['SMILES'].apply(FPGen.generate))\n",
+    "y_mb = mb_data['RT'].to_numpy()\n",
+    "f_mb = mb_data['Formula'].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_data = pd.read_csv(ARTICLES_PATH)\n",
+    "\n",
+    "mols_a = a_data['SMILES'].apply(Chem.MolFromSmiles).to_numpy()\n",
+    "X_a = np.stack(a_data['SMILES'].apply(FPGen.generate).to_numpy())\n",
+    "f_a = a_data['FORMULA'].to_numpy()\n",
+    "dois_a = a_data['DOI'].to_numpy()\n",
+    "y_a = a_data['RT'].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_retention_time_class(retention_time, retention_times=y_mb, num_classes=3):\n",
+    "  \"\"\"\n",
+    "  Determines the retention time class for a given retention time.\n",
+    "\n",
+    "  Args:\n",
+    "    retention_time: The retention time of the compound.\n",
+    "    retention_times: A list or array of all retention times in the dataset.\n",
+    "    num_classes: The desired number of retention time classes.\n",
+    "\n",
+    "  Returns:\n",
+    "    The retention time class (an integer between 0 and num_classes-1).\n",
+    "  \"\"\"\n",
+    "\n",
+    "  # Calculate class boundaries\n",
+    "  min_rt = np.min(retention_times)\n",
+    "  max_rt = np.max(retention_times)\n",
+    "  class_boundaries = np.linspace(min_rt, max_rt+0.001, num_classes+1)\n",
+    "\n",
+    "  # Determine the class index\n",
+    "  class_index = np.digitize(retention_time, class_boundaries) - 1\n",
+    "  return class_index\n",
+    "\n",
+    "\n",
+    "classes = list(map(get_retention_time_class,y_mb))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training on ILD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RD_acc = RelDiffErrorAccumulator()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Cs = 10.0**np.linspace(-4,10,29)\n",
+    "pairs,labels = linear_pairs(X_a,y_a,dois_a)\n",
+    "ild_results,ild_reg_metrics,ild_int_metrics = ILD_cv(pairs,labels,X_mb,y_mb,classes,f_mb,Cs,n_itter=10,n_splits=5,accumulator=RD_acc)\n",
+    "ild_results,ild_reg_metrics,ild_int_metrics = np.array(ild_results),np.array(ild_reg_metrics), np.array(ild_int_metrics)\n",
+    "np.savetxt(current_dir.parent/'output'/'IDB_results_p2'/'Log20R2.csv',ild_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_accumulator_to_csv(accumulator, output_path):\n",
+    "    \"\"\"\n",
+    "    Writes the contents of a RelDiffErrorAccumulator instance to a CSV file.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - accumulator: an instance of RelDiffErrorAccumulator\n",
+    "    - output_path: path to the output CSV file\n",
+    "    \"\"\"\n",
+    "    with open(output_path, mode='w', newline='') as csvfile:\n",
+    "        writer = csv.writer(csvfile)\n",
+    "        writer.writerow(['rel_diff', 'error', 'is_isomer'])  # header\n",
+    "\n",
+    "        for rel_diff, error, is_isomer in zip(\n",
+    "            accumulator.rel_diffs,\n",
+    "            accumulator.errors,\n",
+    "            accumulator.isomeric_flags\n",
+    "        ):\n",
+    "            writer.writerow([rel_diff, int(error), int(is_isomer)])\n",
+    "\n",
+    "write_accumulator_to_csv(RD_acc,current_dir.parent/'output'/'Accumulators'/'Log20R2.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation Results (mean ± std):\n",
+      "PER (test)     : 9.2 ± 1.3\n",
+      "PER (mixed)    : 9.2 ± 1.1\n",
+      "iPER (test)    : 19.7 ± 4.5\n",
+      "iPER (mixed)   : 18.9 ± 3.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Unweighted metrics (PER)\n",
+    "PER_test_mean, PER_test_std = np.mean(ild_results[:, 0]), np.std(ild_results[:, 0],ddof=1)\n",
+    "PER_mixed_mean, PER_mixed_std = np.mean(ild_results[:, 1]), np.std(ild_results[:, 1],ddof=1)\n",
+    "\n",
+    "# Weighted metrics (iPER)\n",
+    "iPER_test_mean, iPER_test_ci = weighted_stats(ild_results[:, 2], ild_results[:, 4])\n",
+    "iPER_mixed_mean, iPER_mixed_ci = weighted_stats(ild_results[:, 3], ild_results[:, 5])\n",
+    "\n",
+    "# Format for printing (in %)\n",
+    "results = {\n",
+    "    \"PER (test)\": format_result(PER_test_mean * 100, PER_test_std * 100),\n",
+    "    \"PER (mixed)\": format_result(PER_mixed_mean * 100, PER_mixed_std * 100),\n",
+    "    \"iPER (test)\": format_result(iPER_test_mean * 100, iPER_test_ci * 100),\n",
+    "    \"iPER (mixed)\": format_result(iPER_mixed_mean * 100, iPER_mixed_ci * 100)\n",
+    "}\n",
+    "\n",
+    "# Print results\n",
+    "print(\"Evaluation Results (mean ± std):\")\n",
+    "for name, value in results.items():\n",
+    "    print(f\"{name:15s}: {value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation Results (mean ± std):\n",
+      "MAPE           : 8.9 ± 1.2\n",
+      "MedAPE         : 7.5 ± 1.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Unweighted metrics (PER)\n",
+    "MAPE, MAPE_std = np.mean(ild_reg_metrics[:, 0]), np.std(ild_reg_metrics[:, 0],ddof=1)\n",
+    "MedAPE, MedAPE_std = np.mean(ild_reg_metrics[:, 1]), np.std(ild_reg_metrics[:, 1],ddof=1)\n",
+    "\n",
+    "# Format for printing (in %)\n",
+    "results = {\n",
+    "    \"MAPE\": format_result(MAPE, MAPE_std),\n",
+    "    \"MedAPE\": format_result(MedAPE, MedAPE_std),\n",
+    "}\n",
+    "\n",
+    "# Print results\n",
+    "print(\"Evaluation Results (mean ± std):\")\n",
+    "for name, value in results.items():\n",
+    "    print(f\"{name:15s}: {value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation Results (mean ± std):\n",
+      "MAPE           : 10.0 ± 1.8\n",
+      "MedAPE         : 8.5 ± 1.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Unweighted metrics (PER)\n",
+    "MAPE, MAPE_std = np.mean(ild_int_metrics[:, 0]), np.std(ild_int_metrics[:, 0],ddof=1)\n",
+    "MedAPE, MedAPE_std = np.mean(ild_int_metrics[:, 1]), np.std(ild_int_metrics[:, 1],ddof=1)\n",
+    "\n",
+    "# Format for printing (in %)\n",
+    "results = {\n",
+    "    \"MAPE\": format_result(MAPE, MAPE_std),\n",
+    "    \"MedAPE\": format_result(MedAPE, MedAPE_std),\n",
+    "}\n",
+    "\n",
+    "# Print results\n",
+    "print(\"Evaluation Results (mean ± std):\")\n",
+    "for name, value in results.items():\n",
+    "    print(f\"{name:15s}: {value}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
